--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </ul>
 
             <div class="header__btns">
-                <button class = 'header__btn' data-pdf-btn><img src="../../img/header/PDF.png" alt="PDF" class = "header__btn-img-pdf"></button>
-                <button class = "header__btn" data-phone-btn><img src="../../img/header/phone.png" alt="phone" class = "header__btn-img"></button>
+                <button class = 'header__btn' data-pdf-btn><img src="./img/header/PDF.png" alt="PDF" class = "header__btn-img-pdf"></button>
+                <button class = "header__btn" data-phone-btn><img src="./img/header/phone.png" alt="phone" class = "header__btn-img"></button>
             </div>
 
             <div class="header__btns-mobile">
